--- a/components/search/SearchBox.module.css
+++ b/components/search/SearchBox.module.css
@@ -16,7 +16,7 @@
 	width: 100%;
 	background: var(--weak-foreground);
 	max-height: 400px;
-	overflow: scroll;
+	overflow-y: scroll;
 	z-index: 11;
 }
 .homeVersion .boxContainer {
