--- a/components/show_carousel/ShowCarousel.module.css
+++ b/components/show_carousel/ShowCarousel.module.css
@@ -1,22 +1,11 @@
 .carousel {
-	overflow: scroll;
+	overflow-x: scroll;
 	display: flex;
 	flex-wrap: nowrap;
 
 	scroll-snap-type: x proximity;
 	/* Horizontal scroll snapping is buggy in Firefox DE */
-
-	/* Avoids scrollbars */
-	-ms-overflow-style: none;
-	scrollbar-width: none;
 }
-/*Avoids scrollbars some more*/
-.carousel::-webkit-scrollbar {
-	-webkit-appearance: none;
-	width: 0;
-	height: 0;
-}
-
 .show {
 	margin-right: 25px;
 	width: min-content;
